# bum

./: .gitignore  .travis.yml  LICENSE  README.md
bum/: Cargo.toml  build.rs
bum/src/: main.rs  media.rs  tagparser.rs  transcode.rs  util.rs  web.rs
bum/src/bum-rpc/: Cargo.toml
bum/src/bum-rpc/src/: lib.rs
bum/src/bum-transcode/: bum-transcode.c  main.rs
bum/src/tag-parser/: main.rs  tag-parser.cpp
client/: Makefile  index.html  package.json  rollup.config.js  tsconfig.json
client/src/: main.js  main.ts  media.js  media.ts
client/src/components/: AlbumsView.html
client/style/: main.css
server/: Makefile  mypy.ini  poetry.toml  pyproject.toml
server/bum/: main.py  media.py  media_database.py  net.py  worker.py
server/transcoder/: .gitmodules  Makefile
server/transcoder/src/: main.c  util.h
server/transcoder2/: Cargo.toml
server/transcoder2/src/: main.rs
