[package]
name = "bum"
version = "0.1.0"
authors = ["Andrew Aldridge <i80and@foxquill.com>"]
build = "build.rs"

[[bin]]
name = "bum"
path = "src/main.rs"

[[bin]]
name = "bum-transcode"
path = "src/bum-transcode/main.rs"

[dependencies]
clap = "2.11"
hyper = "0.9"
libc = "0.2"
pledge = "0.1"
queryst = "1.0"
regex = "0.1"
serde_json = "0.8"
time = "0.1"
toml = "0.1"
url = "1.2"
walkdir = "0.1"

[build-dependencies]
gcc = "0.3"
pkg-config = "0.3"
