[package]
name = "bum"
version = "0.1.0"
authors = ["Andrew Aldridge <i80and@foxquill.com>"]
build = "build.rs"
publish = false

[[bin]]
name = "bum"
path = "src/main.rs"

[[bin]]
name = "bum-transcode"
path = "src/bum-transcode/main.rs"

[[bin]]
name = "bum-tags"
path = "src/tag-parser/main.rs"

[dependencies]
clap = "=2.11.0"
hyper = "0.9"
libc = "0.2"
pledge = "0.1"
queryst = "1.0"
regex = "0.1"
resp = "0.4"
serde_json = "0.8"
time = "0.1"
resize = "0.2.0"

toml = "0.2"
url = "1.2"
walkdir = "0.1"
bum-rpc = {path = "./src/bum-rpc"}

[dependencies.image]
version = "0.10.3"
features = ["jpeg", "png_codec"]

[build-dependencies]
gcc = "0.3"
pkg-config = "0.3"
