[tool.poetry]
name = "bum"
version = "0.1.0"
description = "The Bum multimedia server."
authors = ["Heli Aldridge <heli@heli.pet>"]
license = "AGPL-3.0+"

[tool.poetry.dependencies]
python = "^3.10"
pypledge = "^0.3.1"
tornado = "^6.2"
mutagen = "^1.45.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
mypy = "^0.971"
isort = "^5.10.1"
pyflakes = "^2.5.0"

[tool.poetry.scripts]
bumd = "bum.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
